--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,7 +13,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Framer"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".FinalPreview"
+            android:exported="false" />
+        <activity
+            android:name=".FrameSelectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FiveImageLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FourImageLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ThreeImageLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TwoImageLayoutActivity"
+            android:exported="false" />
         <activity
             android:name=".DashboardActivity"
             android:exported="false" />
@@ -25,7 +43,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
